@@ -1,6 +1,6 @@
 #!@BSHELL@ -
 #
-#	$NetBSD: host-mkdep.in,v 1.20 2011/06/30 20:09:41 wiz Exp $
+#	$NetBSD: host-mkdep.in,v 1.21 2012/08/26 22:37:19 jmmv Exp $
 #
 # Copyright (c) 1991, 1993
 #	The Regents of the University of California.  All rights reserved.
@@ -43,6 +43,7 @@ AWK_OPTIONAL=
 QUIET=false
 CPPFLAGS=
 NEWEXT=.o
+PREFIX=
 OUTFILE=.depend
 SRCS=
 
@@ -61,10 +62,10 @@ set_objlist()
 		IFS="$oifs"
 		objlist=
 		for suf in "$@"; do
-			objlist="$objlist${objlist:+ }$file$suf"
+			objlist="$objlist${objlist:+ }$PREFIX$file$suf"
 		done
 	else
-		objlist="$file"
+		objlist="$PREFIX$file"
 	fi
 }
 
@@ -84,7 +85,7 @@ while [ $# -gt 0 ]; do
 		-p)	NEWEXT=;;
 		-q)	QUIET=true;;
 
-		-[fs])	# Options with arguments
+		-[fPs])	# Options with arguments
 			[ -z "$optarg" ] && {
 				[ $# = 1 ] && usage
 				shift
@@ -92,6 +93,7 @@ while [ $# -gt 0 ]; do
 			}
 			case "-$option" in
 			-f)	OUTFILE="$optarg";;
+			-P)	PREFIX="$optarg";;
 			-s)	NEWEXT="$optarg";;
 			esac
 			optarg=
